Z stalls and cleanup.